improvements for Java 9
git-svn-id: https://svn.apache.org/repos/asf/chemistry/opencmis/trunk@1804997 13f79535-47bb-0310-9956-ffa450edef68